--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 # Configuración de Base de Datos
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASSWORD=9$A1uDs03
+DB_PASSWORD=123456
 DB_PORT=5432
-DB_NAME=postgres
+DB_NAME=adjudicaciones_CAS
 
 # Configuración del Servidor
 PORT=3000
